--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
-    "next": "15.1.6",
+    "next": "15.3.4"
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
