--- a/package.json
+++ b/package.json
@@ -5,33 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "firebase": "^12.4.0",
-    "html2canvas": "^1.4.1",
-    "html2pdf.js": "^0.12.1",
-    "jspdf": "^3.0.3",
-    "lucide-react": "^0.548.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.0",
-    "react-qr-code": "^2.0.18",
-    "resend": "^6.5.2",
-    "sonner": "^2.0.7",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "react-dom": "19.2.0"
   }
 }
