--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint"
   },
-"dependencies": {
-"next": "15.3.5"
-  "react": "19.2.4",
-  "react-dom": "19.2.4"
-}
-
+  "dependencies": {
+    "next": "15.3.6",
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
+  }
 }
